--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,7 @@
 @import "../blocks/root/root.css";
 
 @import "../blocks/page/page.css";
+
+@import "../blocks/header/header.css";
+@import "../blocks/header/__logo/header__logo.css";
+@import "../blocks/header-line/header-line.css";
