--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,7 @@
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: var(--background-color-dark);
