--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,18 @@
 @import "../blocks/header/header.css";
 @import "../blocks/header/__logo/header__logo.css";
 @import "../blocks/header-line/header-line.css";
+
+@import "../blocks/container/container.css";
+
+@import "../blocks/profile/profile.css";
+@import "../blocks/profile-info/profile-info.css";
+@import "../blocks/profile-info/__inner/profile-info__inner.css";
+@import "../blocks/profile-info/__name/profile-info__name.css";
+@import "../blocks/profile-info/__title/profile-info__title.css";
+@import "../blocks/avatar/avatar.css";
+@import "../blocks/avatar/__image/avatar__image.css";
+
+@import "../blocks/edit-button/edit-button.css";
+@import "../blocks/edit-button/__icon/edit-button__icon.css";
+@import "../blocks/add-button/add-button.css";
+@import "../blocks/add-button/__icon/add-button__icon.css";
