пофиксить иконки внутри кнопок

--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -3,6 +3,9 @@
   border: none;
   outline: none;
   background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 150px;
   height: 50px;
   border: 2px solid var(--primary-color-light);
