--- a/pages/index.css
+++ b/pages/index.css
@@ -22,3 +22,11 @@
 @import "../blocks/edit-button/__icon/edit-button__icon.css";
 @import "../blocks/add-button/add-button.css";
 @import "../blocks/add-button/__icon/add-button__icon.css";
+
+@import "../blocks/elements/elements.css";
+@import "../blocks/card/card.css";
+@import "../blocks/card/__image/card__image.css";
+@import "../blocks/card/__info/card__info.css";
+@import "../blocks/card/__title/card__title.css";
+@import "../blocks/like-button/like-button.css";
+@import "../blocks/like-button/__icon/like-button__icon.css";
