--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 
 @import "../blocks/elements/elements.css";
 @import "../blocks/card/card.css";
+@import "../blocks/card/__image-container/card__image-container.css";
 @import "../blocks/card/__image/card__image.css";
 @import "../blocks/card/__info/card__info.css";
 @import "../blocks/card/__title/card__title.css";
