--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,36 +1,26 @@
 .card__image {
-    width: 100%;
-    height: 282px;
-    overflow: hidden;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.card:nth-child(1) > .card__image {
-    background-image: url("../../../images/altai.jpg");
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .card:nth-child(2) > .card__image {
-    background-image: url("../../../images/elbrus.png");
+  background-image: url("../../../images/elbrus.png");
 }
 
 .card:nth-child(3) > .card__image {
-    background-image: url("../../../images/dombay.png");
-    
+  background-image: url("../../../images/dombay.png");
 }
 
 .card:nth-child(4) > .card__image {
-    background-image: url("../../../images/elbrus.png");
-    
+  background-image: url("../../../images/elbrus.png");
 }
 
 .card:nth-child(5) > .card__image {
-    background-image: url("../../../images/dombay.png");
-    
+  background-image: url("../../../images/dombay.png");
 }
 
 .card:nth-child(6) > .card__image {
-    background-image: url("../../../images/karachaevsk.png");
-    
+  background-image: url("../../../images/karachaevsk.png");
 }
