--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -15,8 +15,10 @@
   transition: opacity 0.2s ease-in-out;
 }
 
-.add-button:hover {
-  opacity: 0.6;
+@media (hover: hover) {
+  .add-button:hover {
+    opacity: 0.6;
+  }
 }
 
 @media screen and (max-width: 767px) {
