--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -14,8 +14,10 @@
   transition: opacity 0.2s ease-in-out;
 }
 
-.edit-button:hover {
-  opacity: 0.6;
+@media (hover: hover) {
+  .edit-button:hover {
+    opacity: 0.6;
+  }
 }
 
 @media screen and (max-width: 767px) {
