--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,6 @@
 @import "../blocks/card/__title/card__title.css";
 @import "../blocks/like-button/like-button.css";
 @import "../blocks/like-button/__icon/like-button__icon.css";
+
+@import "../blocks/footer/footer.css";
+@import "../blocks/footer/__title/footer__title.css";
