пофиксить размер футера на мобилках

--- a/blocks/footer/__title/footer__title.css
+++ b/blocks/footer/__title/footer__title.css
@@ -7,3 +7,10 @@
   margin: 0;
   color: var(--secondary-color);
 }
+
+@media screen and (max-width: 880px) {
+  .footer__title {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
