--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -11,6 +11,10 @@
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
   align-self: flex-end;
+  background-image: url("../../images/close-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px 40px;
 }
 
 @media (hover: hover) {
@@ -24,5 +28,6 @@
     width: 26px;
     height: 26px;
     margin-bottom: 14px;
+    background-size: 26px 26px;
   }
 }
