--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -5,16 +5,16 @@
   border: none;
   outline: none;
   background: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
-  align-self: flex-end;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: translate(100%, -100%);
   background-image: url("../../images/close-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 40px 40px;
+  background-size: 32px 32px;
 }
 
 @media (hover: hover) {
@@ -27,7 +27,7 @@
   .close-button {
     width: 26px;
     height: 26px;
-    margin-bottom: 14px;
     background-size: 26px 26px;
+    transform: translate(0, calc(-100% - 19px));
   }
 }
