--- a/blocks/popup/__inner/popup__inner.css
+++ b/blocks/popup/__inner/popup__inner.css
@@ -1,5 +1,6 @@
 .popup__inner {
-  max-width: calc(430px + 40px);
+  position: relative;
+  max-width: 430px;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
