--- a/blocks/profile-info/__inner/profile-info__inner.css
+++ b/blocks/profile-info/__inner/profile-info__inner.css
@@ -2,10 +2,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
 }
-
-/* @media screen and (max-width: 767px) {
-  .profile-info__inner {
-    margin-top: 26px;
-  }
-} */
