--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   width: 150px;
   height: 50px;
   border: 2px solid var(--primary-color-light);
