--- a/blocks/profile-info/__about/profile-info__about.css
+++ b/blocks/profile-info/__about/profile-info__about.css
@@ -7,6 +7,9 @@
   font-size: 18px;
   line-height: 22px;
   color: var(--primary-color-light);
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
