--- a/blocks/profile-info/__name/profile-info__name.css
+++ b/blocks/profile-info/__name/profile-info__name.css
@@ -6,6 +6,9 @@
   font-size: 42px;
   line-height: 48px;
   color: var(--primary-color-light);
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
