--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,30 +1,18 @@
-.close-button {
+.button_type_close {
   width: 40px;
   height: 40px;
-  padding: 0;
-  border: none;
-  outline: none;
-  background: none;
-  cursor: pointer;
-  transition: opacity 0.2s ease-in-out;
   position: absolute;
   right: 0;
   top: 0;
   transform: translate(100%, -100%);
-  background-image: url("../../images/close-icon.svg");
+  background-image: url("../../../images/close-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 32px 32px;
 }
 
-@media (hover: hover) {
-  .close-button:hover {
-    opacity: 0.6;
-  }
-}
-
 @media screen and (max-width: 880px) {
-  .close-button {
+  .button_type_close {
     width: 26px;
     height: 26px;
     background-size: 26px 26px;
