исправить недочёты с разметкой

--- a/pages/index.css
+++ b/pages/index.css
@@ -13,9 +13,9 @@
 
 @import "../blocks/header/header.css";
 @import "../blocks/header/__logo/header__logo.css";
-@import "../blocks/header-line/header-line.css";
 
 @import "../blocks/container/container.css";
+@import "../blocks/main/main.css";
 
 @import "../blocks/profile/profile.css";
 @import "../blocks/profile-info/profile-info.css";
@@ -38,7 +38,6 @@
 @import "../blocks/popup/__container/popup__container.css";
 @import "../blocks/popup/popup.css";
 @import "../blocks/popup/_opened/popup_opened.css";
-@import "../blocks/popup/__inner/popup__inner.css";
 @import "../blocks/popup/__title/popup__title.css";
 @import "../blocks/edit-form/edit-form.css";
 @import "../blocks/edit-form/__inner/edit-form__inner.css";
