--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,10 +1,8 @@
 .button_type_close {
   width: 40px;
   height: 40px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  transform: translate(100%, -100%);
+  align-self: flex-end;
+  transform: translateX(100%);
   background-image: url("../../../images/close-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -16,6 +14,6 @@
     width: 26px;
     height: 26px;
     background-size: 26px 26px;
-    transform: translate(0, calc(-100% - 19px));
+    transform: translate(0, -19px);
   }
 }
