--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,6 +1,7 @@
 .card__image {
   width: 100%;
-  height: 100%;
+  height: 282px;
+  overflow: hidden;
   object-fit: cover;
   object-position: 50% 50%;
 }
