--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   background-color: var(--background-color-light);
   border-radius: 10px;
-  max-width: 430px;
   width: 100%;
 }
