--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,12 @@
 .header {
   margin-top: 45px;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 880px) {
   .header {
     margin-top: 28px;
-    margin-bottom: 31.6px;
+    padding-bottom: 31.6px;
   }
 }
