--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  min-height: 100vh;
   height: 100%;
   background-color: var(--background-color-dark);
 }
