--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,16 +4,5 @@
   height: 100vh;
   position: fixed;
   z-index: 2;
-}
-
-.popup::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: var(--background-color-dark);
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.5);
 }
