перенос полей имени и описания

--- a/blocks/profile-info/__about/profile-info__about.css
+++ b/blocks/profile-info/__about/profile-info__about.css
@@ -8,7 +8,7 @@
   line-height: 22px;
   color: var(--primary-color-light);
   text-overflow: ellipsis;
-  white-space: pre-wrap;
+  white-space: nowrap;
   overflow: hidden;
 }
 
