--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,5 +1,6 @@
 .card {
-    background-color: var(--background-color-light);
-    border-radius: 10px;
-    overflow: hidden;
+  position: relative;
+  background-color: var(--background-color-light);
+  border-radius: 10px;
+  overflow: hidden;
 }
