--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,7 @@
 @import "../blocks/card/__image/card__image.css";
 @import "../blocks/card/__info/card__info.css";
 @import "../blocks/card/__title/card__title.css";
+@import "../blocks/button/_type/button_type_delete.css";
 
 @import "../blocks/footer/footer.css";
 @import "../blocks/footer/__title/footer__title.css";
