--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,10 @@
 .popup {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   width: 100%;
   height: 100vh;
   position: fixed;
-  z-index: 2;
+  z-index: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease-in-out;
 }
