--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -1,7 +1,7 @@
 .button_type_close {
   width: 40px;
   height: 40px;
-  align-self: flex-end;
+  justify-self: end;
   transform: translateX(100%);
   background-image: url("../../../images/close-icon.svg");
   background-repeat: no-repeat;
