--- a/blocks/popup/__image-container/popup__image-container.css
+++ b/blocks/popup/__image-container/popup__image-container.css
@@ -1,10 +1,10 @@
 .popup__image-container {
   position: relative;
-  width: 100%;
-  height: 100%;
   max-width: 75vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: fit-content;
+  width: -moz-fit-content;
+  height: 100%;
+  display: grid;
+  align-content: center;
   margin: 0 auto;
 }
