--- a/blocks/image-popup/__title/image-popup__title.css
+++ b/blocks/image-popup/__title/image-popup__title.css
@@ -1,5 +1,5 @@
-.card__popup-title {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+.image-popup__title {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
