--- a/blocks/form/__text-field/form__text-field.css
+++ b/blocks/form/__text-field/form__text-field.css
@@ -21,6 +21,6 @@
   max-width: 100%;
 }
 
-.form__text-field:first-of-type {
-  margin-top: 0;
+.form__text-field:invalid {
+  border-bottom: 1px solid var(--accent-color);
 }
