--- a/blocks/button/_type/button_type_save.css
+++ b/blocks/button/_type/button_type_save.css
@@ -12,13 +12,19 @@
 
 .button_type_save_disabled {
   opacity: 0.2;
+  color: var(--primary-color-dark);
   background-color: var(--background-color-light);
   border: 1px solid var(--primary-color-dark);
   border-radius: 2px;
+  cursor: not-allowed;
 }
 
 @media (hover: hover) {
   .button_type_save:hover {
     opacity: 0.8;
+  }
+
+  .button_type_save_disabled:hover {
+    opacity: 0.2;
   }
 }
