--- a/blocks/form/__input-field/form__input-field.css
+++ b/blocks/form/__input-field/form__input-field.css
@@ -1,7 +1,10 @@
 .form__input-field {
-  margin-top: 13px;
+  margin-top: 34px;
+  margin-bottom: 5px;
+  position: relative;
 }
 
-.form__text-field:first-of-type {
+.form__input-field:first-of-type {
   margin-top: 0;
+  margin-bottom: 0;
 }
