--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
