--- a/blocks/image-popup/__container/image-popup__container.css
+++ b/blocks/image-popup/__container/image-popup__container.css
@@ -1,10 +1,9 @@
 .image-popup__container {
   position: relative;
+  display: flex;
+  flex-direction: column;
   max-width: 75vw;
   width: fit-content;
   width: -moz-fit-content;
-  height: 100%;
-  display: grid;
-  align-content: center;
   margin: 0 auto;
 }
