--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,8 @@
 .popup__container {
   position: relative;
   max-width: 430px;
-  height: 100%;
-  display: grid;
-  align-content: center;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   z-index: 4;
   cursor: initial;
 }
