--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,6 +24,7 @@
 @import "../blocks/profile-info/__about/profile-info__about.css";
 @import "../blocks/avatar/avatar.css";
 @import "../blocks/avatar/__image/avatar__image.css";
+@import "../blocks/avatar/__edit/avatar__edit.css";
 
 @import "../blocks/elements/elements.css";
 @import "../blocks/card/card.css";
